feat: Add unit type and refine UI animations
Introduces a new `UnitType` ('KG', 'PCS') to the `ProductionEntry` interface and related constants.

Updates the global notification animation to slide in from the top center instead of the right. Also, improves the display of notifications on mobile devices by centering them.

Adds a check for Google Sheets configuration before attempting to sync, providing user feedback if not set up.

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
       .no-scrollbar::-webkit-scrollbar { display: none; }
       .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
       
-      /* Global Notification Animation */
-      @keyframes slideInFromRight {
-        0% { transform: translateX(100%); opacity: 0; }
-        100% { transform: translateX(0); opacity: 1; }
+      /* Global Notification Animation - Centered Top */
+      @keyframes slideInFromTop {
+        0% { transform: translateY(-20px); opacity: 0; }
+        100% { transform: translateY(0); opacity: 1; }
       }
       .notification-animate {
-        animation: slideInFromRight 0.4s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+        animation: slideInFromTop 0.4s cubic-bezier(0.16, 1, 0.3, 1) forwards;
       }
     </style>
   <script type="importmap">
